--- a/apigatewayService/apigateway-service/src/main/resources/application.yml
+++ b/apigatewayService/apigateway-service/src/main/resources/application.yml
@@ -40,3 +40,9 @@ spring:
             - Path=/catalog-service/**
           filters:
             - RewritePath=/catalog-service/(?<segment>.*), /$\{segment}
+        - id: order-service
+          uri: lb://ORDER-SERVICE
+          predicates:
+            - Path=/order-service/**
+          filters:
+            - RewritePath=/order-service/(?<segment>.*), /$\{segment}
